exports[`test hides search when false 1`] = `
<div>
<div>
<div className="soft-half-sides soft-top soft-double-top@anchored text-center background--light-primary">
<h4 className="soft-half-bottom flush-bottom">
Featured Tags
</h4>
<div className="two-thirds@anchored display-inline-block soft-ends@anchored">
<withRouter(Connect(TagWithoutData)) val={[undefined]} />
<withRouter(Connect(TagWithoutData)) val={[undefined]} />
</div>
</div>
<div className="outlined--light outlined--bottom soft-half-sides soft-ends soft-double-bottom@anchored text-center background--light-primary">
<h4 className="soft-half-bottom flush-bottom">
Campuses
</h4>
<div className="two-thirds@anchored display-inline-block soft-ends@anchored">
<withRouter(Connect(TagWithoutData)) val={[undefined]} urlKey="campuses" />
<withRouter(Connect(TagWithoutData)) val={[undefined]} urlKey="campuses" />
</div>
</div>
</div>
</div>
`;

exports[`test hides tags when false 1`] = `
<div>
<div className="outlined--light outlined--bottom soft-half-sides@handheld soft soft-double@anchored text-left background--light-primary">
<Form classes={{...}} submit={[Function]} action={true}>
<i className="icon-search locked-left soft-half-left" />
<span style={{...}} onClick={[Function]} className="h7 locked-right flush-bottom">
Cancel
</span>
<Input id="search" name="search" hideLabel={true} classes={{...}} inputClasses="soft-double-left soft-half-bottom" placeholder="Type your search here..." type="text" defaultValue="test" onChange={[Function]} autoFocus={true} />
<div className="one-whole text-left">
<h6>
<em>
Find a group by zipcode, name, campus, or description
</em>
</h6>
</div>
</Form>
</div>
</div>
`;

exports[`test renders with props 1`] = `
<div>
<div>
<div className="soft-half-sides soft-top soft-double-top@anchored text-center background--light-primary">
<h4 className="soft-half-bottom flush-bottom">
Featured Tags
</h4>
<div className="two-thirds@anchored display-inline-block soft-ends@anchored">
<withRouter(Connect(TagWithoutData)) val={[undefined]} />
<withRouter(Connect(TagWithoutData)) val={[undefined]} />
</div>
</div>
<div className="outlined--light outlined--bottom soft-half-sides soft-ends soft-double-bottom@anchored text-center background--light-primary">
<h4 className="soft-half-bottom flush-bottom">
Campuses
</h4>
<div className="two-thirds@anchored display-inline-block soft-ends@anchored">
<withRouter(Connect(TagWithoutData)) val={[undefined]} urlKey="campuses" />
<withRouter(Connect(TagWithoutData)) val={[undefined]} urlKey="campuses" />
</div>
</div>
</div>
<div className="outlined--light outlined--bottom soft-half-sides@handheld soft soft-double@anchored text-left background--light-primary">
<Form classes={{...}} submit={[Function]} action={true}>
<i className="icon-search locked-left soft-half-left" />
<span style={{...}} onClick={[Function]} className="h7 locked-right flush-bottom">
Cancel
</span>
<Input id="search" name="search" hideLabel={true} classes={{...}} inputClasses="soft-double-left soft-half-bottom" placeholder="Type your search here..." type="text" defaultValue="test" onChange={[Function]} autoFocus={true} />
<div className="one-whole text-left">
<h6>
<em>
Find a group by zipcode, name, campus, or description
</em>
</h6>
</div>
</Form>
</div>
</div>
`;

exports[`test renders without campuses 1`] = `
<div>
<div>
<div className="soft-half-sides soft-top soft-double-top@anchored text-center background--light-primary">
<h4 className="soft-half-bottom flush-bottom">
Featured Tags
</h4>
<div className="two-thirds@anchored display-inline-block soft-ends@anchored">
<withRouter(Connect(TagWithoutData)) val={[undefined]} />
<withRouter(Connect(TagWithoutData)) val={[undefined]} />
</div>
</div>
<div className="outlined--light outlined--bottom soft-half-sides soft-ends soft-double-bottom@anchored text-center background--light-primary">
<h4 className="soft-half-bottom flush-bottom">
Campuses
</h4>
<div className="two-thirds@anchored display-inline-block soft-ends@anchored" />
</div>
</div>
<div className="outlined--light outlined--bottom soft-half-sides@handheld soft soft-double@anchored text-left background--light-primary">
<Form classes={{...}} submit={[Function]} action={true}>
<i className="icon-search locked-left soft-half-left" />
<span style={{...}} onClick={[Function]} className="h7 locked-right flush-bottom">
Cancel
</span>
<Input id="search" name="search" hideLabel={true} classes={{...}} inputClasses="soft-double-left soft-half-bottom" placeholder="Type your search here..." type="text" defaultValue="test" onChange={[Function]} autoFocus={true} />
<div className="one-whole text-left">
<h6>
<em>
Find a group by zipcode, name, campus, or description
</em>
</h6>
</div>
</Form>
</div>
</div>
`;

exports[`test renders without tags 1`] = `
<div>
<div className="outlined--light outlined--bottom soft-half-sides@handheld soft soft-double@anchored text-left background--light-primary">
<Form classes={{...}} submit={[Function]} action={true}>
<i className="icon-search locked-left soft-half-left" />
<span style={{...}} onClick={[Function]} className="h7 locked-right flush-bottom">
Cancel
</span>
<Input id="search" name="search" hideLabel={true} classes={{...}} inputClasses="soft-double-left soft-half-bottom" placeholder="Type your search here..." type="text" defaultValue="test" onChange={[Function]} autoFocus={true} />
<div className="one-whole text-left">
<h6>
<em>
Find a group by zipcode, name, campus, or description
</em>
</h6>
</div>
</Form>
</div>
</div>
`;
